--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
     "xterm": "https://esm.sh/xterm@^5.3.0?external=rxjs",
     "xterm/css/xterm.css": "https://esm.sh/xterm@^5.3.0/css/xterm.css?external=rxjs",
     "xterm-addon-fit": "https://esm.sh/xterm-addon-fit@^0.8.0?external=rxjs",
-    "xterm-addon-web-links": "https://esm.sh/xterm-addon-web-links@^0.9.0?external=rxjs",
-    "xterm-addon-image": "https://esm.sh/xterm-addon-image@^0.5.0?external=rxjs"
+    "xterm-addon-web-links": "https://esm.sh/xterm-addon-web-links@^0.9.0?external=rxjs"
   }
 }
 </script>
